--- a/src/content/docs/reference/language/expressions.mdx
+++ b/src/content/docs/reference/language/expressions.mdx
@@ -1,5 +1,7 @@
 ---
 title: Expressions
+sidebar:
+  order: 2
 ---
 
 This page describes the expressions available in the Tenzir Query Language (TQL).
